force-app/main/default/objects/Visit__c/fields/Icons__c.field-meta.xml
<CustomField>
    <fullName>Icons__c</fullName>
    <label>Icons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Questions</fullName>
                <default>true</default>
                <label>Questions about your health and medications</label>
            </value>
            <value>
                <fullName>Electrocardiogram</fullName>
                <label>Electrocardiogram (ECG)</label>
            </value>
            <value>
                <fullName>Vital_signs_weight_and_height</fullName>
                <label>Vital signs, weight and height</label>
            </value>
            <value>
                <fullName>Blood_tests</fullName>
                <label>Blood tests</label>
            </value>
            <value>
                <fullName>Urine_test</fullName>
                <label>Urine test</label>
            </value>
            <value>
                <fullName>Pregnancy_test</fullName>
                <label>Pregnancy test</label>
            </value>
            <value>
                <fullName>Receive_study_medication</fullName>
                <label>Receive study medication</label>
            </value>
            <value>
                <fullName>Return_study_medication</fullName>
                <label>Return study medication</label>
            </value>
            <value>
                <fullName>No_food_or_drink</fullName>
                <label>No food or drink except water for 10 hours prior to visit</label>
            </value>
            <value>
                <fullName>Physical_examination</fullName>
                <label>Physical examination</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>