force-app/main/default/objects/Visit__c/fields/Is_Pre_Enrollment_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Enrollment_Visit__c</fullName>
    <formula>Visit_Plan__r.Is_Pre_Enrollment_Visit_Plan__c</formula>
    <label>Is Pre Enrollment Visit</label>
    <type>Checkbox</type>
</CustomField>