force-app/main/default/objects/Visit__c/fields/Motivational_Message__c.field-meta.xml
<CustomField>
    <fullName>Motivational_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivational Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>