force-app/main/default/objects/Visit__c/fields/Patient_Portal_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Portal_Name__c</fullName>
    <label>Patient Portal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>