force-app/main/default/objects/Visit__c/fields/selected_icons__c.field-meta.xml
<CustomField>
    <fullName>selected_icons__c</fullName>
    <label>selected icons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>