force-app/main/default/objects/Visit__c/fields/Timeplane__c.field-meta.xml
<CustomField>
    <fullName>Timeplane__c</fullName>
    <label>Timeplane</label>
    <length>50</length>
    <type>Text</type>
</CustomField>