force-app/main/default/objects/Visit__c/fields/Visit_Description__c.field-meta.xml
<CustomField>
    <fullName>Visit_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>