force-app/main/default/objects/Visit__c/fields/Visit_Number__c.field-meta.xml
<CustomField>
    <fullName>Visit_Number__c</fullName>
    <label>SDH Visit Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>