force-app/main/default/objects/Visit__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <label>Visit Plan</label>
    <referenceTo>Visit_Plan__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>