force-app/main/default/objects/Visit__c/fields/Visit_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Visit_Schedule__c</fullName>
    <label>Patient Portal Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>